tests/Rules/Aria/Fixtures/valid/aria_valid_attr.html.twig
<div aria-hidden="true" aria-label="ok">Hello</div>
