tests/Rules/Aria/Fixtures/invalid/body_aria_hidden.html.twig
{# 1 errors #}
<!DOCTYPE html>
<html lang="en">
  <head><title>Test</title></head>
  <body aria-hidden="true">
    Hidden
  </body>
</html>
